// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot embed 1`] = `
<div
  class="yozora-code-embed"
/>
`;

exports[`snapshot literal 1`] = `
<div
  class="yozora-code-literal"
>
  <div
    class="yozora-code-literal__toolbar"
  >
    <span
      class="yozora-common-light-buttons"
    >
      <span
        class="yozora-common-light-button yozora-common-light-button--close"
        title="close"
      />
      <span
        class="yozora-common-light-button yozora-common-light-button--minimize"
        title="minimize"
      />
      <span
        class="yozora-common-light-button yozora-common-light-button--maximize"
        title="maximize"
      />
    </span>
    <span
      class="yozora-code-literal__title"
      title="/home/demo/a.tsx"
    >
      /home/demo/a.tsx  | 6 lines.
    </span>
    <span
      class="yozora-code-literal__copy-button"
    >
      <button
        aria-label="Copy to clipboard"
        class="yozora-common-copy-button yozora-common-copy-button--waiting"
        type="button"
      >
        copy
      </button>
    </span>
  </div>
  <code
    class="yozora-code-literal__content"
  >
    <pre>
      <div
        class="yozora-code-highlighter prism-code language-jsx"
        style="color:#d4d4d4;background-color:none;line-height:1.6rem;max-height:0"
      >
        <div
          class="yozora-code-highlighter__linenos"
          style="width:2.2em"
        >
          <div
            class="yozora-code-highlighter__line yozora-code-highlighter__line--highlight"
          >
            <span>
              1
            </span>
          </div>
          <div
            class="yozora-code-highlighter__line yozora-code-highlighter__line--highlight"
          >
            <span>
              2
            </span>
          </div>
          <div
            class="yozora-code-highlighter__line"
          >
            <span>
              3
            </span>
          </div>
          <div
            class="yozora-code-highlighter__line yozora-code-highlighter__line--highlight"
          >
            <span>
              4
            </span>
          </div>
          <div
            class="yozora-code-highlighter__line"
          >
            <span>
              5
            </span>
          </div>
          <div
            class="yozora-code-highlighter__line"
          >
            <span>
              6
            </span>
          </div>
        </div>
        <div
          class="yozora-code-highlighter__codes"
        >
          <div
            class="yozora-code-highlighter__codes-wrapper"
          >
            <div
              class="yozora-code-highlighter__line yozora-code-highlighter__line--highlight token-line"
              style="color:#d4d4d4"
            >
              <span
                class="token keyword"
                style="color:rgb(86, 156, 214)"
              >
                function
              </span>
              <span
                class="token plain"
              >
                 
              </span>
              <span
                class="token punctuation"
                style="color:rgb(106, 153, 85)"
              >
                (
              </span>
              <span
                class="token punctuation"
                style="color:rgb(106, 153, 85)"
              >
                )
              </span>
              <span
                class="token plain"
              >
                 
              </span>
              <span
                class="token punctuation"
                style="color:rgb(106, 153, 85)"
              >
                {
              </span>
              <span
                class="token plain"
              />
            </div>
            <div
              class="yozora-code-highlighter__line yozora-code-highlighter__line--highlight token-line"
              style="color:#d4d4d4"
            >
              <span
                class="token plain"
              >
                      
              </span>
              <span
                class="token keyword"
                style="color:rgb(86, 156, 214)"
              >
                const
              </span>
              <span
                class="token plain"
              >
                 a 
              </span>
              <span
                class="token operator"
                style="color:rgb(212, 212, 212)"
              >
                =
              </span>
              <span
                class="token plain"
              >
                 
              </span>
              <span
                class="token number"
                style="color:rgb(181, 206, 168)"
              >
                1
              </span>
              <span
                class="token punctuation"
                style="color:rgb(106, 153, 85)"
              >
                ;
              </span>
              <span
                class="token plain"
              />
            </div>
            <div
              class="yozora-code-highlighter__line token-line"
              style="color:#d4d4d4"
            >
              <span
                class="token plain"
              >
                      
              </span>
              <span
                class="token keyword"
                style="color:rgb(86, 156, 214)"
              >
                const
              </span>
              <span
                class="token plain"
              >
                 b 
              </span>
              <span
                class="token operator"
                style="color:rgb(212, 212, 212)"
              >
                =
              </span>
              <span
                class="token plain"
              >
                 
              </span>
              <span
                class="token number"
                style="color:rgb(181, 206, 168)"
              >
                2
              </span>
              <span
                class="token punctuation"
                style="color:rgb(106, 153, 85)"
              >
                ;
              </span>
              <span
                class="token plain"
              />
            </div>
            <div
              class="yozora-code-highlighter__line yozora-code-highlighter__line--highlight token-line"
              style="color:#d4d4d4"
            >
              <span
                class="token plain"
              >
                      
              </span>
              <span
                class="token keyword"
                style="color:rgb(86, 156, 214)"
              >
                const
              </span>
              <span
                class="token plain"
              >
                 c 
              </span>
              <span
                class="token operator"
                style="color:rgb(212, 212, 212)"
              >
                =
              </span>
              <span
                class="token plain"
              >
                 a 
              </span>
              <span
                class="token operator"
                style="color:rgb(212, 212, 212)"
              >
                *
              </span>
              <span
                class="token plain"
              >
                 a 
              </span>
              <span
                class="token operator"
                style="color:rgb(212, 212, 212)"
              >
                +
              </span>
              <span
                class="token plain"
              >
                 b 
              </span>
              <span
                class="token operator"
                style="color:rgb(212, 212, 212)"
              >
                *
              </span>
              <span
                class="token plain"
              >
                 b
              </span>
              <span
                class="token punctuation"
                style="color:rgb(106, 153, 85)"
              >
                ;
              </span>
              <span
                class="token plain"
              />
            </div>
            <div
              class="yozora-code-highlighter__line token-line"
              style="color:#d4d4d4"
            >
              <span
                class="token plain"
              >
                      
              </span>
              <span
                class="token keyword"
                style="color:rgb(86, 156, 214)"
              >
                return
              </span>
              <span
                class="token plain"
              >
                 
              </span>
              <span
                class="token tag punctuation"
                style="color:rgb(106, 153, 85)"
              >
                &lt;
              </span>
              <span
                class="token tag"
                style="color:rgb(86, 156, 214)"
              >
                span
              </span>
              <span
                class="token tag punctuation"
                style="color:rgb(106, 153, 85)"
              >
                &gt;
              </span>
              <span
                class="token plain-text"
              >
                Answer: 
              </span>
              <span
                class="token punctuation"
                style="color:rgb(106, 153, 85)"
              >
                {
              </span>
              <span
                class="token plain"
              >
                c
              </span>
              <span
                class="token punctuation"
                style="color:rgb(106, 153, 85)"
              >
                }
              </span>
              <span
                class="token tag punctuation"
                style="color:rgb(106, 153, 85)"
              >
                &lt;/
              </span>
              <span
                class="token tag"
                style="color:rgb(86, 156, 214)"
              >
                span
              </span>
              <span
                class="token tag punctuation"
                style="color:rgb(106, 153, 85)"
              >
                &gt;
              </span>
              <span
                class="token plain"
              />
            </div>
            <div
              class="yozora-code-highlighter__line token-line"
              style="color:#d4d4d4"
            >
              <span
                class="token plain"
              >
                    
              </span>
              <span
                class="token punctuation"
                style="color:rgb(106, 153, 85)"
              >
                }
              </span>
            </div>
          </div>
        </div>
      </div>
    </pre>
  </code>
</div>
`;

exports[`snapshot live 1`] = `
<div
  class="yozora-code-live"
>
  <div
    class="yozora-code-live__toolbar"
  >
    <span
      class="yozora-common-light-buttons"
    >
      <span
        class="yozora-common-light-button yozora-common-light-button--close"
        title="close"
      />
      <span
        class="yozora-common-light-button yozora-common-light-button--minimize"
        title="minimize"
      />
      <span
        class="yozora-common-light-button yozora-common-light-button--maximize"
        title="maximize"
      />
    </span>
    <span
      class="yozora-code-live__title"
      title=""
    >
       
    </span>
    <span
      class="yozora-code-live__copy-button"
    >
      <button
        aria-label="Copy to clipboard"
        class="yozora-common-copy-button yozora-common-copy-button--waiting"
        type="button"
      >
        copy
      </button>
    </span>
  </div>
  <div
    class="yozora-code-live__main yozora-code-live__main--vertical"
  >
    <div
      class="yozora-code-live__editor"
    >
      <div
        class="yozora-code-editor yozora-code-editor"
        padding="10"
        style="line-height:1.6rem;tab-size:2"
      >
        <div
          class="yozora-code-editor__textarea-wrapper"
        >
          <div
            class="yozora-code-editor__textarea-linenos"
          />
          <textarea
            autocapitalize="off"
            autocomplete="off"
            autocorrect="off"
            class="yozora-code-editor__textarea"
            spellcheck="false"
            style="tab-size:2;white-space:pre;padding:0.5rem 0.6em 0 12px"
          >
            function () {
      const a = 1;
      const b = 2;
      const c = a * a + b * b;
      return &lt;span&gt;Answer: {c}&lt;/span&gt;
    }
          </textarea>
        </div>
        <pre
          aria-hidden="true"
          class="yozora-code-editor__previewer"
          style="tab-size:2;white-space:pre"
        >
          <div
            class="yozora-code-highlighter prism-code language-jsx"
            style="color:#d4d4d4;background-color:none;line-height:1.6rem;max-height:8rem;min-height:100%"
          >
            <div
              class="yozora-code-highlighter__linenos"
              style="width:2.2em"
            >
              <div
                class="yozora-code-highlighter__line"
              >
                <span>
                  1
                </span>
              </div>
              <div
                class="yozora-code-highlighter__line"
              >
                <span>
                  2
                </span>
              </div>
              <div
                class="yozora-code-highlighter__line"
              >
                <span>
                  3
                </span>
              </div>
              <div
                class="yozora-code-highlighter__line"
              >
                <span>
                  4
                </span>
              </div>
              <div
                class="yozora-code-highlighter__line"
              >
                <span>
                  5
                </span>
              </div>
              <div
                class="yozora-code-highlighter__line"
              >
                <span>
                  6
                </span>
              </div>
            </div>
            <div
              class="yozora-code-highlighter__codes"
            >
              <div
                class="yozora-code-highlighter__codes-wrapper"
              >
                <div
                  class="yozora-code-highlighter__line token-line"
                  style="color:#d4d4d4"
                >
                  <span
                    class="token keyword"
                    style="color:rgb(86, 156, 214)"
                  >
                    function
                  </span>
                  <span
                    class="token plain"
                  >
                     
                  </span>
                  <span
                    class="token punctuation"
                    style="color:rgb(106, 153, 85)"
                  >
                    (
                  </span>
                  <span
                    class="token punctuation"
                    style="color:rgb(106, 153, 85)"
                  >
                    )
                  </span>
                  <span
                    class="token plain"
                  >
                     
                  </span>
                  <span
                    class="token punctuation"
                    style="color:rgb(106, 153, 85)"
                  >
                    {
                  </span>
                  <span
                    class="token plain"
                  />
                </div>
                <div
                  class="yozora-code-highlighter__line token-line"
                  style="color:#d4d4d4"
                >
                  <span
                    class="token plain"
                  >
                          
                  </span>
                  <span
                    class="token keyword"
                    style="color:rgb(86, 156, 214)"
                  >
                    const
                  </span>
                  <span
                    class="token plain"
                  >
                     a 
                  </span>
                  <span
                    class="token operator"
                    style="color:rgb(212, 212, 212)"
                  >
                    =
                  </span>
                  <span
                    class="token plain"
                  >
                     
                  </span>
                  <span
                    class="token number"
                    style="color:rgb(181, 206, 168)"
                  >
                    1
                  </span>
                  <span
                    class="token punctuation"
                    style="color:rgb(106, 153, 85)"
                  >
                    ;
                  </span>
                  <span
                    class="token plain"
                  />
                </div>
                <div
                  class="yozora-code-highlighter__line token-line"
                  style="color:#d4d4d4"
                >
                  <span
                    class="token plain"
                  >
                          
                  </span>
                  <span
                    class="token keyword"
                    style="color:rgb(86, 156, 214)"
                  >
                    const
                  </span>
                  <span
                    class="token plain"
                  >
                     b 
                  </span>
                  <span
                    class="token operator"
                    style="color:rgb(212, 212, 212)"
                  >
                    =
                  </span>
                  <span
                    class="token plain"
                  >
                     
                  </span>
                  <span
                    class="token number"
                    style="color:rgb(181, 206, 168)"
                  >
                    2
                  </span>
                  <span
                    class="token punctuation"
                    style="color:rgb(106, 153, 85)"
                  >
                    ;
                  </span>
                  <span
                    class="token plain"
                  />
                </div>
                <div
                  class="yozora-code-highlighter__line token-line"
                  style="color:#d4d4d4"
                >
                  <span
                    class="token plain"
                  >
                          
                  </span>
                  <span
                    class="token keyword"
                    style="color:rgb(86, 156, 214)"
                  >
                    const
                  </span>
                  <span
                    class="token plain"
                  >
                     c 
                  </span>
                  <span
                    class="token operator"
                    style="color:rgb(212, 212, 212)"
                  >
                    =
                  </span>
                  <span
                    class="token plain"
                  >
                     a 
                  </span>
                  <span
                    class="token operator"
                    style="color:rgb(212, 212, 212)"
                  >
                    *
                  </span>
                  <span
                    class="token plain"
                  >
                     a 
                  </span>
                  <span
                    class="token operator"
                    style="color:rgb(212, 212, 212)"
                  >
                    +
                  </span>
                  <span
                    class="token plain"
                  >
                     b 
                  </span>
                  <span
                    class="token operator"
                    style="color:rgb(212, 212, 212)"
                  >
                    *
                  </span>
                  <span
                    class="token plain"
                  >
                     b
                  </span>
                  <span
                    class="token punctuation"
                    style="color:rgb(106, 153, 85)"
                  >
                    ;
                  </span>
                  <span
                    class="token plain"
                  />
                </div>
                <div
                  class="yozora-code-highlighter__line token-line"
                  style="color:#d4d4d4"
                >
                  <span
                    class="token plain"
                  >
                          
                  </span>
                  <span
                    class="token keyword"
                    style="color:rgb(86, 156, 214)"
                  >
                    return
                  </span>
                  <span
                    class="token plain"
                  >
                     
                  </span>
                  <span
                    class="token tag punctuation"
                    style="color:rgb(106, 153, 85)"
                  >
                    &lt;
                  </span>
                  <span
                    class="token tag"
                    style="color:rgb(86, 156, 214)"
                  >
                    span
                  </span>
                  <span
                    class="token tag punctuation"
                    style="color:rgb(106, 153, 85)"
                  >
                    &gt;
                  </span>
                  <span
                    class="token plain-text"
                  >
                    Answer: 
                  </span>
                  <span
                    class="token punctuation"
                    style="color:rgb(106, 153, 85)"
                  >
                    {
                  </span>
                  <span
                    class="token plain"
                  >
                    c
                  </span>
                  <span
                    class="token punctuation"
                    style="color:rgb(106, 153, 85)"
                  >
                    }
                  </span>
                  <span
                    class="token tag punctuation"
                    style="color:rgb(106, 153, 85)"
                  >
                    &lt;/
                  </span>
                  <span
                    class="token tag"
                    style="color:rgb(86, 156, 214)"
                  >
                    span
                  </span>
                  <span
                    class="token tag punctuation"
                    style="color:rgb(106, 153, 85)"
                  >
                    &gt;
                  </span>
                  <span
                    class="token plain"
                  />
                </div>
                <div
                  class="yozora-code-highlighter__line token-line"
                  style="color:#d4d4d4"
                >
                  <span
                    class="token plain"
                  >
                        
                  </span>
                  <span
                    class="token punctuation"
                    style="color:rgb(106, 153, 85)"
                  >
                    }
                  </span>
                </div>
              </div>
            </div>
          </div>
        </pre>
      </div>
    </div>
    <div
      class="yozora-code-live__previewer yozora-code-live__previewer--center"
    >
      <div
        class="yozora-code-embed"
      />
    </div>
  </div>
</div>
`;
